--- a/assets/css/hamburger.css
+++ b/assets/css/hamburger.css
@@ -93,6 +93,10 @@
 #links{
   display: none;
 }
+.all-links{
+  display: flex;
+  gap: 120px;
+} 
 
 .hamburger-container a {
   margin-bottom: 1em;
@@ -100,13 +104,23 @@
   /* color: #000; */
   color: #158;
   text-decoration: none;
-  font-size: 3rem;
+  font-size: 2rem;
   padding: 12px 12px;
   text-align: center;
   border-radius: 9px;
+  text-align: left;
+  border: 2px solid transparent;
 }
 
 .hamburger-container a:hover {
-  background: #151515;
-  color: #fff
+  /* background: #151515; */
+  /* color: #fff; */
+  border: 2px solid #158;
+}
+
+
+@media only screen and (max-width: 810px){
+  .all-links{
+    gap: 2px;
+  }
 }
