--- a/assets/css/m-q.css
+++ b/assets/css/m-q.css
@@ -5,21 +5,52 @@
     padding: 0;
   }
 
+  .tiny{
+    display: none;
+  }
+  .container, body{
+    /* height: 100vh; Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
+    /* height: 130vw; */
+    /* overflow: hidden; */
+  }
   .intro-1 section span{
     display: none;
   }
+  .intro-1 .section-one h3{
+    font-size: 7vw;
+  }
+  .intro-1 .section-one p{
+    font-size: 5vw;
+    color: #ccc;
+  }
+  .intro-1 .section-one #myskill{
+    font-size: 3vw;
+    top: 30px;
+    margin: 12px;
+    /* display: none */
+    /* background: #fff; */
+    /* color: dodgerblue; */
+  }
 
-
+  .intro-1 .section-two .badge{
+    position: relative;  
+    top: 80px;
+    /* margin-right: 50vw; */
+  }
   .intro-1 .section-two strong{
     position: relative;
-    bottom: 34px;
+    top: 30vw;
+    color: #ccc;
+    display: none;
   }
   .top-header{
     height: 90%;
   }
 
   #testimonial-heading{
-    top: 23px;
+    top: 0px;
+    bottom: 23px;
     left: 0rem;
     padding: 17px;
   }
@@ -120,21 +151,45 @@
   .stat-container{
     display: block;
     margin-top: 123px;
+    padding: 12px;
   }
 
   .stat-label{
-    margin-top: 50px;
+    margin-top: 0px;
+    font-size: 11vw;
   } 
 
   .flip-card {
     display: block;
     margin: 0 auto;
-    padding: 15px;
+    padding: 15px 0px;
+  }
+  .flip-card-front #card-1-h1{
+    font-size: 6vw;
+  }
+  .flip-card-back h1{
+    font-size: 8vw;
+    position: relative;
+    bottom: 40px;
+  }
+  .flip-card-back p{
+    position: relative;
+    bottom: 33px;
+    font-size: 4vw;
+    padding: 12px;
+  }
+  .flip-card-front #card-2-h1{
+    font-size: 6vw;
+    position: relative;
+    top: 43px;
+  }
+  h1#card-3-h1{
+    font-size: 3vh;
+  }
+  #python_txt{
+    padding: 12px;
   }
 
-  #my_projects{
-    margin-top:80px;
-  }
 
   /* >>>>> Make the test align at the center <<<<< */
     #card-2-h1{
@@ -151,6 +206,11 @@
     /* >>> Removing User Assistance smooth button */
     .fa-chevron-down, .next-test-btn{
       display: none !important;
+    }
+    
+    #my_projects .stat-label{
+      margin-bottom: 0px;
+      margin-top: 35vw;
     }
 
     .project_cards{
@@ -207,9 +267,28 @@
     #project-section-2{
       margin-top: 24rem;
     }
+/* jide */
+    .jide-links{
+      display: flex;
+      width: 123vw;
+    }
+    .todo-links{
+      display: flex;
+      width: 123vw;
+      position: relative;
+      top: 103px;
+      gap: 50px;
+    }
+    .cake-links{
+
+    }
+    .project-description .right-icon {
+      margin-left: 0px;
+  }
 
     i.fas.fa-sitemap.right-icon.todo-link{
-      margin-top: 90px;
+      margin-top: 0px;
+      margin-left: 0px;
     }
 
     .project-link .cake-link{
@@ -347,21 +426,30 @@
     }
 
     .my_links ul{
-      margin: 0 auto;
+      position: relative;
+      left: 110px;
+      bottom: 60px;
     }
 
     .my_links a{
       font-weight: 700px;
+      font-size: 4vw;
+    }
+
+    #social-links{
+      position: relative;
+      left: 40vw;
     }
 
     .my_links h4{
       position: static;
-      text-align: center;
+      left: 40vw;
     }
 
     .more-contact{
       /* >>> To Align The Mail To the center <<< */
-      left: -4px;
+      left: 15px;
+      font-size: 4vw;
     }
 
     .form{
@@ -369,10 +457,16 @@
       margin-top: 20px;
     }
 
+    .subscribe-form{
+      right:0px;
+      left: 25vw;
+    }
+
     .subscribe-form h4{
       font-size: 33px;
       color: #15589f; 
       padding: 12px;  
+      margin-bottom: 23px;
     }
 
     .subscribe-form input{
@@ -464,7 +558,7 @@
   }
 
   .testimony-card{
-    top: 120px;
+    top: 20px;
     height: 100%;
   }
 
@@ -490,12 +584,13 @@
     position: relative;
     bottom: 0px;
     padding: 12px;
+    margin-top: 0px;
   }
 
   #section2,
   #section3{
-    margin-top: 16rem;
-    margin-bottom: 13rem;
+    margin-top: 0rem;
+    margin-bottom: 0rem;
   }
   .testimonial .section{
     display: block;
