--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -91,6 +91,7 @@ a{
 
 .top h1{
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: 'Lato';
   font-size: 4rem;
   padding-left: 15px;
   font-weight: 700;
@@ -143,7 +144,6 @@ a{
 
 #high{
   height: 90px;
-  width: 100vw;
   position: fixed;
   z-index: 99;
   overflow: hidden;
